Cambios de los URL

--- a/clientes/index.html
+++ b/clientes/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TRAVEL Clientes</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../paqueteShared.css">
-    <link rel="stylesheet" href="../Clientes/index.css">
+    <link rel="stylesheet" href="/paqueteShared.css">
+    <link rel="stylesheet" href="/Clientes/clientes.css">
 </head>
 <body>
    <div class="backdrop"></div>
@@ -18,19 +18,19 @@
                 <span class="toggle-button__bar"></span>
                 <span class="toggle-button__bar"></span>
             </button>
-            <a href="../main.html" class="main-header_brand">
-                <img src="../Imagenes/LOGOTIPO.jpg.png" alt="Travel" >
+            <a href="/main.html" class="main-header_brand">
+                <img src="/Imagenes/LOGOTIPO.jpg.png" alt="Travel" >
             </a>
         </div><nav class="main-nav">
             <ul class="main-nav_items">
                 <li class="main-nav_item">
-                    <a href="../paquetes/main.html">Paquetes</a>
+                    <a href="/paquetes/">Paquetes</a>
                 </li>
                 <li class="main-nav_item">
-                    <a href="main.html">Clientes</a>
+                    <a href="/clientes/">Clientes</a>
                 </li>
                 <li class="main-nav_item main-nav_item--cta">
-                    <a href="../paquetes/main.html">Información</a>
+                    <a href="/paquetes/">Información</a>
                 </li>
             </ul>
         </nav>        
@@ -39,20 +39,20 @@
         <nav class="mobile-nav">
             <ul class="mobile-nav__items">
                 <li class="mobile-nav__item">
-                    <a href="../Katherine Rivera/paquetes/main.html">Paquetes</a>
+                    <a href="/paquetes/">Paquetes</a>
                 </li>
                 <li class="mobile-nav__item">
-                    <a href="../Katherine Rivera/Clientes/main.html">Clientes</a>
+                    <a href="/Clientes/">Clientes</a>
                 </li>
                 <li class="mobile-nav__item">
-                    <a href="../Katherine Rivera/paquetes/main.html">Información</a>
+                    <a href="/paquetes/">Información</a>
                 </li>
             </ul>
         </nav>
         <div>
             <div class="testimonio" id="cliente-1"></div>
                 <div class="testimonio__image-container">
-                    <img src="../Imagenes/cliente1.jpg" alt="Andrea López - Cliente" class="testimonio__image">
+                    <img src="/Imagenes/cliente1.jpg" alt="Andrea López - Cliente" class="testimonio__image">
                 </div>
                 <div class="testimonio__info">
                     <h1 class="testimonio__nombre">Andrea López</h1>    
@@ -63,7 +63,7 @@
                 </div>
                 <div class="testimonio" id="cliente-2"></div>
                 <div class="testimonio__image-container">
-                    <img src="../Imagenes/cliente2.jpg" alt="Andrea López . Cliente" class="testimonio__image">
+                    <img src="/Imagenes/cliente2.jpg" alt="Andrea López . Cliente" class="testimonio__image">
                 </div>
                 <div class="testimonio__info">
                     <h1 class="testimonio__nombre">Juan Malo</h1>    
@@ -86,6 +86,6 @@
         </nav>
 
     </footer>
-    <script src="../Katherine Rivera/shared.js"></script>
+    <script src="/shared.js"></script>
 </body>
 </html>
