--- a/main.html
+++ b/main.html
@@ -7,11 +7,11 @@
     <title>uHost</title>
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../Katherine Rivera/paquetes/packages.css">
+    <link rel="stylesheet" href="/paquetes/packages.css">
     <link rel="stylesheet" href="paqueteShared.css">
     <link rel="stylesheet" href="index.css"> 
-    <link rel="stylesheet" href="../Katherine Rivera/Imagenes/freedom.jpg">
-    <link rel="stylesheet" href="../Katherine Rivera/Media queries/style.css">
+    <link rel="stylesheet" href="/Imagenes/freedom.jpg">
+    <link rel="stylesheet" href="/media-queries/style.css">
 </head>
 
 <body>
@@ -32,19 +32,19 @@
                 <span class="toggle-button__bar"></span>
             </button>
             <a href="main.html" class="main-header_brand">
-                <img src="../Katherine Rivera/Imagenes/LOGOTIPO.jpg.png" alt="Viaja por Ecuador" >
+                <img src="/Imagenes/LOGOTIPO.jpg.png" alt="Viaja por Ecuador" >
             </a>
         </div>
         <nav class="main-nav">
             <ul class="main-nav_items">
                 <li class="main-nav_item">
-                    <a href="paquetes/paquetesindex.html">Paquetes</a>
+                    <a href="/paquetes/">Paquetes</a>
                 </li>
                 <li class="main-nav_item">
-                    <a href="../Katherine Rivera/Clientes/main.html">Clientes</a>
+                    <a href="/Clientes/">Clientes</a>
                 </li>
                 <li class="main-nav_item main-nav_item--cta">
-                    <a href="../Katherine Rivera/paquetes/main.html">Información</a>
+                    <a href="/paquetes/">Información</a>
                 </li>
             </ul>
         </nav>        
@@ -53,13 +53,13 @@
     <nav class="mobile-nav">
         <ul class="mobile-nav__items">
             <li class="mobile-nav__item">
-                <a href="../Katherine Rivera/paquetes/main.html">Paquetes</a>
+                <a href="/paquetes/">Paquetes</a>
             </li>
             <li class="mobile-nav__item">
-                <a href="../Katherine Rivera/Clientes/main.html">Clientes</a>
+                <a href="/Clientes/">Clientes</a>
             </li>
             <li class="mobile-nav__item">
-                <a href="../Katherine Rivera/paquetes/main.html">Información</a>
+                <a href="/paquetes/">Información</a>
             </li>
         </ul>
     </nav>
@@ -67,9 +67,9 @@
     <main>
         <section id="descripcion-del-producto">
             <h1>Conoce Ecuador</h1>
-            <a href="../main.html" class="main-header_brand">
+            <a href="/main.html" class="main-header_brand">
                <div class="imagen">
-                <img src="../Katherine Rivera/Imagenes/freedom.jpg" alt="" >
+                <img src="/Imagenes/freedom.jpg" alt="" >
             </div>
             </a>
         </section>
@@ -136,7 +136,8 @@
                     <article class="cards-item">
                         <h2> Precio 3</h2>
                         <p>Lorem ipsum, doomnis ex itaque minima voluptatibus fugiat impedit minus a autem.</p>
-                     <article class="cards-item only-xbs">
+                    </article>
+                    <article class="cards-item only-xbs">
                         <h2> Precio 4</h2>
                         <p>Lorem ipsum, amet ipsa? Doloribuima voluptatibus fugiat impedit minus a autem.</p>
                      </article>
@@ -190,6 +191,6 @@
             </ul>
         </nav>
     </footer>
-    <script src="../Katherine Rivera/shared.js"></script>
+    <script src="/shared.js"></script>
 </body>
 </html>  
