--- a/paquetes/index.html
+++ b/paquetes/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>uHost</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../paqueteShared.css">
+    <link rel="stylesheet" href="/paqueteShared.css">
     <link rel="stylesheet" href="packages.css">
 </head>
 
@@ -21,18 +21,18 @@
         </button>
         <div>
             <a href="../main.html" class="main-header_brand">
-                <img src="../Imagenes/LOGOTIPO.jpg.png" alt="Viaja por Ecuador" >
+                <img src="/Imagenes/LOGOTIPO.jpg.png" alt="Viaja por Ecuador" >
             </a>
         </div><nav class="main-nav">
             <ul class="main-nav_items">
                 <li class="main-nav_item">
-                    <a href="../paquetesindex.html">Paquetes</a>
+                    <a href="/paquetes/">Paquetes</a>
                 </li>
                 <li class="main-nav_item">
-                    <a href="../Clientes/main.html">Clientes</a>
+                    <a href="/Clientes/">Clientes</a>
                 </li>
                 <li class="main-nav_item main-nav_item--cta">
-                    <a href="../paquetes/main.html">Información</a>
+                    <a href="/paquetes/">Información</a>
                 </li>
             </ul>
         </nav>        
@@ -41,13 +41,13 @@
         <nav class="mobile-nav">
             <ul class="mobile-nav__items">
                 <li class="mobile-nav__item">
-                    <a href="../Katherine Rivera/paquetes/main.html">Paquetes</a>
+                    <a href="/paquetes/">Paquetes</a>
                 </li>
                 <li class="mobile-nav__item">
-                    <a href="../Katherine Rivera/Clientes/main.html">Clientes</a>
+                    <a href="/Clientes/">Clientes</a>
                 </li>
                 <li class="mobile-nav__item">
-                    <a href="../Katherine Rivera/paquetes/main.html">Información</a>
+                    <a href="/paquetes/">Información</a>
                 </li>
             </ul>
         </nav> 
@@ -87,6 +87,6 @@
             </ul>
         </nav>
     </footer>
-    <script src="../Katherine Rivera/shared.js"></script>
+    <script src="/shared.js"></script>
 </body>
 </html>  
